--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "from-dev-to-startup-cto",
-  "version": "0.1.0",
-  "private": false,
+  "name": "talk-from-dev-to-startup-cto",
+  "version": "1.0.0",
+  "private": true,
+  "devDependencies": {
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^4.0.0",
+    "prettier-eslint": "^8.1.1"
+  },
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "spectacle-code-slide": "^0.5.2",
-    "spectacle-scripts": "2.1.1",
+    "spectacle-scripts": "^2.1.3",
+    "standard-version": "^5.0.2",
     "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && rm -rf docs && mv build docs",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "release": "standard-version"
   },
   "browserslist": [
     ">0.2%",
