--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "talk-from-dev-to-startup-cto",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": true,
+  "engines": {
+    "node": "12.14.0"
+  },
   "devDependencies": {
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^12.0.0",
